name:              yesod-skeleton
version:           0.0.0
license:           BSD3
author:            Harri Salokorpi
category:          Web
stability:         Experimental
cabal-version:     >= 1.10
build-type:        Simple

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

executable         yesod-skeleton
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    main-is:
                main.hs
    default-language:
                Haskell2010

    default-extensions:
                TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 0.9.3      && < 0.10
                 , yesod-core                    >= 0.9.3      && < 0.10
                 , yesod-default                 >= 0.4        && < 0.5
                 , clientsession                 >= 0.7.3      && < 0.8
                 , bytestring                    >= 0.9        && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , shakespeare-text              >= 0.10       && < 0.11
                 , wai                           >= 0.4.2      && < 0.5
                 , transformers                  >= 0.2        && < 0.3
