name:              yesod-skeleton
version:           0.0.0
license:           BSD3
author:            Harri Salokorpi
category:          Web
stability:         Experimental
cabal-version:     >= 1.10
build-type:        Simple

Flag production
    Description:   Build the production executable.
    Default:       False

Flag devel
    Description:   Build for use with "yesod devel"
    Default:       False

executable         yesod-skeleton
    if flag(devel)
        Buildable: False

    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        ghc-options:   -Wall -threaded -O0

    hs-source-dirs: src/
    main-is: YesodSkeleton/main.hs
    default-language: Haskell2010

    default-extensions:
                TemplateHaskell
                QuasiQuotes
                GeneralizedNewtypeDeriving
                OverloadedStrings
                CPP
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.0.1.1    && < 1.1
                 , yesod-core                    >= 1.0.1      && < 1.1
                 , clientsession                 >= 0.7.3.1    && < 0.8
                 , bytestring                    >= 0.9.1.4    && < 0.10
                 , text                          >= 0.11       && < 0.12
                 , template-haskell
                 , shakespeare-text              >= 1.0.0      && < 1.1
                 , wai                           >= 1.2        && < 1.3
                 , transformers                  >= 0.2.2      && < 0.3
